<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Netflix Clone</string>
    <string name="SplashScreen">Splash Screen</string>
    <string name="netflix_logo">Netflix Logo</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="sing_in_button_text">Sign In</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="signup_text">New to Netflix? Sign up now.</string>
    <string name="privacy_text">PRIVACY</string>
    <string name="help_text">HELP</string>
    <string name="SignIn_textView">SIGN IN</string>
    <string name="netfliix_logo">Netfliix logo</string>
    <string name="getStartedButtonText">GET STARTED</string>
    <string name="lockicon">icon</string>
    <string name="seeYourPlansButtonText">SEE YOUR PLANS</string>
    <string name="step1to3_string">Step 1 to 3</string>
    <string name="chooseYourPlanString">Choose your plan</string>
    <string name="noCommitmentString">No commitments, cancel at any time.</string>
    <string name="everythingOnLowPrice">Everything on Netflix for one low price.</string>
    <string name="noadsString">No ads and no extra fees. Ever.</string>
    <string name="imageDescriptionString">Image</string>
    <string name="signin">SIGNIN</string>
    <string name="choosePlanPerfectForYouText">Choose the plan that\'s right for you.</string>
    <string name="upgrade_downgradeString">Downgrade or upgrade at any time.</string>
    <string name="basic">Basic</string>
    <string name="basicPriceFormat">₹ 349/month</string>
    <string name="standard">Standard</string>
    <string name="standardPriceFormat">₹ 649/month</string>
    <string name="continueText">CONTINUE</string>
    <string name="premium">Premium</string>
    <string name="premiumPriceFormat">₹ 799/month</string>
    <string name="basicPrice">349</string>
    <string name="standardPrice">649</string>
    <string name="premiumPrice">799</string>
    <string name="steptwo">STEP 2 OF 3</string>
    <string name="finishSettingAccountText">Finish setting up your account.</string>
    <string name="StepTwoMajorTextView">Netflix is personalised for you. Create a password to watch"\n"Netflix on any device"\n"at any time.</string>
    <string name="steptwoOfThree">STEP 2 OF 3</string>
    <string name="createPassWord">Create a password to start your membership.</string>
    <string name="fewStepsMore">Just a few steps and you are done! We hate paperwork,too.</string>
    <string name="stepthreeofThree">STEP 3 OF 3</string>
    <string name="setPaymentText">Set up your payment</string>
    <string name="membershipStartText">Your membership starts as soon as you set up payment.</string>
    <string name="noCommitmentStringForStepThree">No Commitments."\n"Cancel online anytime.</string>
    <string name="visacard">Visa Card</string>
    <string name="masterCard">Master Card</string>
    <string name="americanExpress">American Express</string>
    <string name="lastcard">Last Card</string>
    <string name="moveFurther">Move Further</string>
    <string name="creditOrDebit">Credit or Debit Card</string>
    <string name="signOut">SIGNOUT</string>
    <string name="stringSetUpCreditCard">Set up your credit or debit card.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="contactNumber">Contact Number</string>
    <string name="changeString">Change</string>
    <string name="termsAndConditons">By checking the checkbox below, you agree to our Terms of Use, Privacy Statement, and that you are over 18. Netflix will automatically continue your membership and charge the monthly membership fee to your payment method until you cancel. You may cancel at any time to avoid future charges.</string>
    <string name="startMemberShibText">START MEMBERSHIP</string>
    <string name="iAgreeString">I agree.</string>
    <string name="payString">PAY</string>
    <string name="planExpiredText">Your plan has expired please select a new plan that suits you</string>
    <string name="resetPasswordString">Reset Password?</string>
    <string name="movies">Movies</string>
    <string name="tvSeries">Tv Series</string>
    <string name="popularSearchString">Popular Searches</string>
    <string name="textviewMainRecLayout">Textview</string>
    <string name="resetPasswordSettingsTextView">We will send you an email with instructions on how to reset your password.</string>
    <string name="planString">Plan</string>
    <string name="date">Date</string>
    <string name="currentPasswordString">Current Password</string>
    <string name="changePasswordString">Change Password</string>
    <string name="search">Search</string>
    <string name="Home">Home</string>
    <string name="settings">Settings</string>
    <string name="playButtonString">Play</string>
    <string name="track_selection_title">Video Quality</string>
</resources>