<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.appcompat.widget.Toolbar
    android:layout_height="55dp"
    android:layout_width="match_parent"
    android:background="@color/black"
    style="@style/AppTheme.Custom">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
        <ImageView
            android:id="@+id/netflixlogo"
            android:layout_width="115dp"
            android:layout_height="33dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/lockicon"
            android:src="@drawable/ic_netflix_icon_text">

        </ImageView>

        <TextView
            android:id="@+id/tvseriestooltext"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/netflixlogo"
            android:text="@string/tvSeries"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movietooltext"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="133dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/netflixlogo"
            android:text="@string/movies"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.appcompat.widget.Toolbar>
</merge>