<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.PaymentGatewayActivity">
    <include
        android:id="@+id/toolbar_payment_gateway"
        layout="@layout/toolbar_payment_gateway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/stepthreeOfThreePaymentGateway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stepthreeofThree"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/creditCardSetUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringSetUpCreditCard"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"></TextView>
            <LinearLayout
                android:id="@+id/layoutForCards"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/visaCard"
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/visacard"
                    android:contentDescription="@string/visacard">
                </ImageView>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp"></Space>
                <ImageView
                    android:id="@+id/masterCard"
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/mastercard"
                    android:contentDescription="@string/visacard"/>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp"></Space>
                <ImageView
                    android:id="@+id/americanCard"
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/americanexpress"
                    android:contentDescription="@string/americanExpress"/>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp"></Space>
                <ImageView
                    android:id="@+id/lastCard"
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/lastcard"
                    android:contentDescription="@string/lastcard"/>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp"></Space>
            </LinearLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="30dp"></Space>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="335dp"
                android:layout_height="61dp"
                android:background="@color/white"
                android:padding="1dp"
                android:textColorHint="@color/black"
                android:layout_gravity="center"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:hintTextColor="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_stroke"
                    android:hint="@string/firstName"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:padding="10dp"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"></Space>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="335dp"
                android:layout_height="61dp"
                android:background="@color/white"
                android:padding="1dp"
                android:layout_gravity="center"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:hintTextColor="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_stroke"
                    android:hint="@string/lastName"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:padding="10dp"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"></Space>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contactNumberLayout"
                android:layout_width="335dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:padding="1dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:hintTextColor="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactNumbertext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_stroke"
                    android:hint="@string/contactNumber"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:padding="10dp"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"></Space>
            <RelativeLayout
                android:layout_width="333dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="@drawable/linearlayoutstrok">
                <TextView
                    android:id="@+id/costToSet"
                    android:layout_width="203dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/basicPriceFormat"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/planNametoSet"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/basic"
                    android:textColor="@color/black"
                    android:layout_below="@+id/costToSet"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Change"
                    android:layout_width="99dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/costToSet"
                    android:background="@drawable/linearlayoutstrok"
                    android:gravity="top|center"
                    android:paddingTop="5dp"
                    android:text="@string/changeString"
                    android:layout_alignParentEnd="true"
                    android:textColor="#2979FF"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <Space android:layout_height="5dp"
                android:layout_width="5dp"></Space>
            <TextView
                android:id="@+id/toputurltext"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/termsAndConditons"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <Space android:layout_height="5dp"
                android:layout_width="5dp"></Space>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/iagree"
                android:layout_width="143dp"
                android:layout_height="37dp"
                android:layout_marginStart="35dp"
                android:buttonTint="@color/red"
                android:text="@string/iAgreeString"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"></Space>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startmembershipbutton"
                android:layout_width="309dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@color/red"
                android:text="@string/startMemberShibText"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"></Space>
        </LinearLayout>
    </ScrollView>
</LinearLayout>