<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activities.SwipeScreenActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/black"
        android:theme="@style/Theme.AppCompat.Light.Dialog">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">
            <ImageView
                android:id="@+id/toolbar_netflix_logo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_logo_netflix"
                android:contentDescription=  "@string/netfliix_logo">
            </ImageView>

            <TextView
                android:id="@+id/privacyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/toolbar_netflix_logo"
                android:text="@string/privacy_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/helpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/toolbar_netflix_logo"
                android:text="@string/help_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/signInTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/toolbar_netflix_logo"
                android:text="@string/SignIn_textView"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerSwipeScreen"
        android:layout_width="match_parent"
        android:layout_height="486dp"
        android:layout_below="@+id/toolbar">
    </androidx.viewpager.widget.ViewPager>
    <LinearLayout
        android:id="@+id/silderdots"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/viewPagerSwipeScreen"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"></LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStartedButton"
        android:layout_width="334dp"
        android:layout_height="59dp"
        android:layout_marginBottom="12dp"
        android:background="@color/activeDots"
        android:text="@string/getStartedButtonText"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textSize="20sp"></androidx.appcompat.widget.AppCompatButton>
</RelativeLayout>